created homework markdown file

--- a/scripts/homework/WG_Homework.Rmd
+++ b/scripts/homework/WG_Homework.Rmd
@@ -1,88 +1,63 @@
-# Aims:
-# 1. Visualize BioTIME data in space and complete the following tasks sprinkled throughout code below
-# 2. TASK 1: Calculate correlations and visualize time series of species pairs
-# 3. TASK 2: Identify study pairs that have no data in their overlapping time series
-# 4. TASK 3: Explore the effect of treatments on time series data
-# 5. Ensure that R and GitHub are running smoothly through these exercises
+---
+title: "WG_Homework"
+author: "Ryan Langendorf, Courtney Collins, Nathalie Chardon, and Sam Straus"
+date: "28/03/2023"
+output: html_document
+---
 
-# Authors: Ryan Langendorf, Courtney Collins, Nathalie Chardon
-# Date created: 13 Mar 2023
-# Date updated: 23 Mar 2023 (NC)
+### Aims:
 
+1.  Visualize BioTIME data in space and complete the following tasks sprinkled throughout code below
+2.  TASK 1: Calculate correlations and visualize time series of species pairs
+3.  TASK 2: Identify study pairs that have no data in their overlapping time series
+4.  TASK 3: Explore the effect of treatments on time series data
+5.  Ensure that R and GitHub are running smoothly through these exercises
+
+Before getting into it, first we would like you to make sure that you have the most recent version of R installed.
+
+### Update R and Rstudio
+
+#### Updating R
+
+To check your R version, run `R.version` in your R console. Please make sure you have R version 4.2.3 installed. To update your R version, visit <https://cran.rstudio.com>.
+
+Note that for macOS, the newest version can either be loaded for silicon (M1 or newer) or Intel chips. Check what kind you have: Apple symbol in menu bar --\> About this Mac --\> look at "Processor" info
+
+#### Updating Rstudio
+
+Please make sure you have RStudio version 1.4.1106 installed. To check your version: RStudio in menu bar --\> About RStudio --\> look at Version info (2023.03.0+386 will show on Mac). Follow [this link](https://support--rstudio-com.netlify.app/products/rstudio/download/) to update your Rstudio. [This blog post](https://www.r-bloggers.com/2022/01/how-to-install-and-update-r-and-rstudio/) has useful information about installing if you have questions.
+
+### Load libraries and input files
+
+```{r, message = FALSE}
 # # LIBRARIES # #
-library(tidyverse)
-library("dplyr")
-library("tibble")
-library("readr") 
-library("ggplot2")
-library("magrittr")
+library(tidyverse) # a suite of tidy packages useful for data manipulation
+library("dplyr") # data manipulation
+library("tibble") # help to create simple dataframes
+library("readr") # flexible package for reading in data files
+library("ggplot2") # data visualization
+library("magrittr") # aids in syntax and piping
 
 rm(list=ls()) 
 
 
 # # INPUT FILES # #
-load("data/tidy/collated_pairs.RData") #collated pairs of overlapping studies
-load('data/prep_biotime/bio_pairs_10km.RData') #metadata of overlapping studies
+load("../../data/tidy/collated_pairs.RData") #collated pairs of overlapping studies
+load('../../data/prep_biotime/bio_pairs_10km.RData') #metadata of overlapping studies
+```
 
+### Visualize data
 
+First, let's look at the data to get a sense of their structure
 
-
-####################################################################################################
-
-# # UPDATE R AND RSTUDIO # # 
-
-####################################################################################################
-
-## Please make sure you have R version 4.2.3 installed. 
-
-# Check your version: 
-R.version
-
-# Update your version: https://cran.rstudio.com
-
-# Note that for macOS, the newest version can either be loaded for silicon (M1 or newer) or Intel chips. 
-# Check what kind you have: Apple symbol in menu bar --> About this Mac --> look at "Processor" info
-
-
-## Please make sure you have RStudio version 1.4.1106 installed. 
-
-# Check your version: RStudio in menu bar --> About RStudio --> look at Version info (2023.03.0+386 will show on Mac)
-
-# Update your version: https://support--rstudio-com.netlify.app/products/rstudio/download/
-
-## Here is a useful blog about the installation if you have questions: 
-## https://www.r-bloggers.com/2022/01/how-to-install-and-update-r-and-rstudio/
-
-
-
-
-####################################################################################################
-
-# # VISUALIZE DATA # # 
-
-####################################################################################################
-
-## Load Data
-#these are the datasets in bioTime that overlap both in time (>=1 year) and space (within a 10km distance) 
-load("data/tidy/collated_pairs.RData")
-load('data/prep_biotime/bio_pairs_10km.RData') #metadata of overlapping studies
-
-
-#let's look at the data to get a sense of their structure 
+```{r}
 head(bio.pairs)
+```
 
-#each row reflects a pair of 2 time series that overlap (1D.1 and 1D.2) 
-#Each time series in a pair is defined by a unique taxon in a unique location 
-#For example the first pair is of Marine plants & Marine invertebrates (ID 120 & 122) 
-#Each taxon can have multiple species in it, e.g. there are 260 species of Marine plants in the timeseries 1D=120
-#if we look closer at the organisms.1 columns we see these are all tropical algae
-#You will also notice that some IDs are in more than one pair, e.g. ID 459 (Birds) is in 4 of the 6 pairs shown here 
+Each row reflects a pair of 2 time series that overlap (1D.1 and 1D.2). Each time series in a pair is defined by a unique taxon in a unique location. For example, the first pair is of Marine plants & Marine invertebrates (ID 120 & 122). Each taxon can have multiple species in it, e.g. there are 260 species of marine plants in the timeseries 1D=120. If we look closer at the organisms.1 columns we see these are all tropical algae. You will also notice that some IDs are in more than one pair, e.g. ID 459 (Birds) is in 4 of the 6 pairs shown here. Next, let's look at how these studies are distributed across the globe. First we'll draw a basic world map, add "y" or "n" for display of tropics and polar latitudes.
 
-
-# Let's look at how these studies are distributed across the globe
-
-# First draw a basic world map, add "y" or "n" for display of tropics and polar latitudes
-
+```{r}
+## create function to draw world map
 drawWorld<-function(lats) {
   world_map<-map_data("world")
   
@@ -111,17 +86,13 @@ taxaCol<-c('#ffffff','#ffffbf','#5e4fa2','#f46d43','#3288bd','#abdda4','#a8c614'
 # Let's also look at the distribution of taxa pairs in these data
 par(mai = c(.5,3.5,.1,.1)) #create space under x-axis
 barplot(table(bio.pairs$taxa.pairs), las = 2, horiz = T)
+```
 
+### Task 1: Species pairs
 
+For this task, we will calculate correlations and visualize time series of species pairs. First, we will select a pair of time series, then we will extract the list of species in the two time series.
 
-
-####################################################################################################
-
-# # TASK 1: SPECIES PAIRS # # 
-
-####################################################################################################
-
-###PLOT SPP PAIRS----
+```{r}
 ## So let's explore a particular pair of time series with lots of overlapping data
 pair=164
 
@@ -134,7 +105,7 @@ timeseries_2 <- collated.pairs %>% dplyr::filter(ID == pair_2_ID)
 
 years_overlap <- unique(timeseries_1$YEAR)[unique(timeseries_1$YEAR) %in% unique(timeseries_2$YEAR)] %>% sort()
 
-years_overlap #so these timeseries have overlapping data for 30 years!
+years_overlap # these timeseries have overlapping data for 30 years!
 
 
 ## Let's make a list of the species in these two timeseries
@@ -159,8 +130,11 @@ timeseries_2_species_length <- sapply(timeseries_2_species, function(x){
     unlist() %>%
     length()
 })
+```
 
-## Now we will randomly select a species from each timeseries, with at least 10 observations
+Next, we will randomly select a species from each timeseries, with at least 10 observations to explore.
+
+```{r}
 sp1 = timeseries_1_species[sample(x = which(timeseries_1_species_length > 10), size = 1)]
 sp2 = timeseries_2_species[sample(x = which(timeseries_2_species_length > 10), size = 1)]
 
@@ -172,15 +146,13 @@ sp1_data <- timeseries_1 %>%
     YEAR %in% years_overlap
   ) 
 head(sp1_data)
-#notice that there are multiple observations of this species within the same year with different abundance values
-#these are due to sampling occurring at different spatial locations within the study area (for example plots)
+```
 
-#Because we want to look at how the abundances of species pairs co-vary over time, for now, let's take the average 
-#of all spatial replicates within each year for each species. 
+Notice that there are multiple observations of this species within the same year with different abundance values. These are due to sampling occurring at different spatial locations within the study area (for example plots). Because we want to look at how the abundances of species pairs co-vary over time, for now, let's take the average of all spatial replicates within each year for each species.
 
-#TASK 1: There are many reasons why this might not be the most accurate approach, try to think of some different ideas for 
-#how we can best approach this issue and bring them to the working group
+TASK 1: There are many reasons why this might not be the most accurate approach, try to think of some different ideas for how we can best approach this issue and bring them to the working group?
 
+```{r}
 sp1_data <- timeseries_1 %>%
   dplyr::filter(
     SPECIES == sp1,
@@ -213,23 +185,29 @@ sp2_data <- timeseries_2 %>%
   ) %>%
   dplyr::ungroup() %>%
   dplyr::arrange(YEAR)
+```
 
-## So you will remember, the overlap we calculated above is at the taxon level, so for all species in the timeseries 
-#but each pair of species may not overlap across all the years 
-#so we need to filter the data by only the years that these species overlap in sampling 
+You will remember that the overlap we calculated above is at the taxon level, so for all species in the timeseries. But each pair of species may not overlap across all the years. We need to filter the data by only the years that these species overlap in sampling. This next code chunk will filter by overlapping years and calculate the correlation between species.
+
+```{r}
+## filter the data by only the years that these species overlap in sampling 
 sp1_data %<>% dplyr::filter(YEAR %in% sp2_data$YEAR)
 sp2_data %<>% dplyr::filter(YEAR %in% sp1_data$YEAR)
 
 ## Calculate correlation between two species
 cor_pair <- cor(sp1_data$Abundance, sp2_data$Abundance)
+```
 
+Finally, we can plot our time series and correlations between species over time.
+
+```{r}
 ## Plot our timeseries
 fig_data <- dplyr::bind_rows(
   sp1_data %>% dplyr::mutate(Species = sp1),
   sp2_data %>% dplyr::mutate(Species = sp2)
 )
 
-#plot correlation over time 
+## Plot correlation over time 
 fig_data %>%
   ggplot() +
   theme_bw() +
@@ -244,30 +222,28 @@ fig_data %>%
   labs(
     title = paste0("Correlation = ", round(cor_pair, 2))
   ) + xlab("Year")
+```
 
-#How does it look? Are your species highly correlated over time? positively or negatively? 
-#let's look back at the metadata and see what kind of organisms we are looking at 
+How does it look? Are your species highly correlated over time? Positively or negatively? Let's look back at the metadata and see what kind of organisms we are looking at.
 
+```{r}
 bio.pairs%>%subset(ID.1==pair_1_ID&ID.2==pair_2_ID)
+```
 
-#so you can see we are looking at small mammals and plants in tallgrass prairie 
-#seems like biologically we might expect these groups to co-vary? does your species pair reflect this?
-#if you want to dig deeper, let's look at the full species names 
+So you can see we are looking at small mammals and plants in tallgrass prairie. It seems like, biologically, we might expect these groups to co-vary. Does your species pair reflect this? If you want to dig deeper, let's look at the full species names.
+
+```{r}
 timeseries_1%>%filter(grepl(sp1, SPECIES))%>%select(GENUS_SPECIES)%>%distinct(.)
 timeseries_2%>%filter(grepl(sp2, SPECIES))%>%select(GENUS_SPECIES)%>%distinct(.)
+```
 
-#feel free to research more about these individual species to inform why they may or may not correlate over time
+Feel free to research more about these individual species to inform why they may or may not correlate over time.
 
+### Task 2: Check for zeroes in data for taxa pairs in overlapping years
 
+Next, let's make the same graph as above, but at the taxa level (rather than species level). Using the same pair that we identified at the start of Task 1, we will extract abundance, calculate the correlations, and plot the time series and correlations at the taxon level.
 
-####################################################################################################
-
-# # TASK 2: CHECK FOR ZEROS IN DATA FOR TAXA PAIRS IN OVERLAPPING YEARS # # 
-
-####################################################################################################
-
-# Now let's make the same graph as above, but at the taxa level.
-
+```{r}
 # Abundance data for taxa 1 from the pair identified at the start of the last section
 taxon1_data <- timeseries_1 %>%
   dplyr::group_by(YEAR) %>%
@@ -320,11 +296,13 @@ fig_data %>%
   labs(
     title = paste0("Correlation = ", round(cor_pair, 2))
   ) + xlab("Year")
+```
 
-# How does this graph compare to the species-level graph you made? Is the correlation higher or lower?
+How does this graph compare to the species-level graph you made? Is the correlation higher or lower?
 
-# This example had abundance data for both taxa groups in all years. What about taxa pairs that 
-# have many 0s in their overlapping years? Let's look for an example of such a pair. 
+This example had abundance data for both taxa groups in all years. What about taxa pairs that have many 0s in their overlapping years? Let's look for an example of such a pair. We'll do this using a for-loop.
+
+```{r}
 
 zeros <- data.frame(study_id = NA, years = NA) #initialize empty dataframe
 
@@ -369,28 +347,23 @@ for (i in 1:nrow(bio.pairs)) {
 
 # Look at zeros
 zeros
+```
 
-# Turns out there are no overlapping years with zeros in abundance or biomass! That's great news, 
-# and will make our analyses easier. 
+It turns out there are no overlapping years with zeros in abundance or biomass! That's great news, and it will make our analyses easier.
 
-# TASK 2: Think about some reasons why having 0s in taxa 1 and taxa 2 of overlapping pairs of years
-# could present some difficulties in our analyses of asking whether changes in abundance in taxa in 
-# one year can predict changes in abundance of another taxa.
+TASK 2: Think about some reasons why having 0s in taxa 1 and taxa 2 of overlapping pairs of years could present some difficulties in our analyses of asking whether changes in abundance in taxa in one year can predict changes in abundance of another taxa.
 
+### Task 3: Treatments
 
+Now let's consider the broader stud(ies) and experiments in which these data were collected. We can read in a dataframe with additional metadata for each study from BioTime.
 
+```{r}
+load('../../data/prep_biotime/meta_pairs_10km.RData') #biotime metadata for 10 km pairs to use
+```
 
-####################################################################################################
+First, we will filter by unique IDs, and then explore the methods of the studies.
 
-# # TASK 3: TREATMENTS # # 
-
-####################################################################################################
-
-###TREATMENTS----
-#Now let's consider the broader stud(ies) and experiments in which these data were collected 
-#We can read in a dataframe with additional metadata for each study from BioTime 
-load('data/prep_biotime/meta_pairs_10km.RData') #biotime metadata for 10 km pairs to use
-
+```{r}
 #filter for our unique IDs   
 pair=164
 
@@ -403,21 +376,24 @@ meta.pairs<-filter(meta.pairs, STUDY_ID==pair_1_ID|STUDY_ID==pair_2_ID)
 head(meta.pairs$METHODS)
 
 head(meta.pairs$GENERAL_TREAT)
+```
 
-#We can see for ID 311 that there were seven fire and grazing treatments with 2 trap-lines per treatment
-#however we have not accounted for these different treatments in any way when plotting the species correlations above
+We can see for ID 311 that there were seven fire and grazing treatments with 2 trap-lines per treatment. However, we have not accounted for these different treatments in any way when plotting the species correlations above. This could potentially cause issues in our interpretations of the different time series.
 
-##This could potentially cause issues in our interpretations of the different time series
-#TASK 3: Try to think of some different ideas for how we might account for this and bring them to the working group
+TASK 3: Try to think of some different ideas for how we might account for this and bring them to the working group.
 
-#now let's see where these studies were located 
+Next, let's see where these studies were located.
+```{r}
 head(meta.pairs$CENT_LAT)
 head(meta.pairs$CENT_LONG)
+```
 
-#So it appears these studies were in the exact same location, and upon further investigation 
+So it appears these studies were in the exact same location. Let's dig a bit deeper. 
+
+```{r}
 head(meta.pairs$DATA_SOURCE)
-#we see that they are both from the Konza Prairie LTER, but they don't both report the same treatments. 
-#So we might need to do some more digging to sort out these inconsistencies... 
+```
 
-#See if you can find any other inconsistencies in the meta-data for these 2 studies, or look through the entire 
-#meta.pairs dataframe to see if anything else looks concerning! 
+Upon further investigation, we see that they are both from the Konza Prairie LTER, but they don't both report the same treatments. We might need to do some more digging to sort out these inconsistencies... 
+
+See if you can find any other inconsistencies in the meta-data for these 2 studies, or look through the entire meta.pairs dataframe to see if anything else looks concerning! 
