--- a/scripts/data_processing/data.processing.Rmd
+++ b/scripts/data_processing/data.processing.Rmd
@@ -31,7 +31,7 @@ load('data/prep_biotime/meta_pairs_10km.RData') #biotime metadata for 10 km pair
 #subseted<-collated.pairs[1:10000,]
 
 #load functions
-source("scripts/data_processing/Functions_data.processing.R")
+source("functions_data.processing.R")
 
 ```
 
@@ -258,8 +258,8 @@ Load data
 
 ```{r}
 
-load("./data/data_processing/outdated/cleaned_collated_standardized_MSF.Rdata") #NOTE WE ARE LOADING OUTDATED DATA - CHECK WHAT DATA IS REPLACING IT (Isac?)
-between.studies.overlap<-readRDS("data/data_processing/between.studies.overlap.RDS")
+load("../data/data_processing/outdated/cleaned_collated_standardized_MSF.Rdata") #NOTE WE ARE LOADING OUTDATED DATA - CHECK WHAT DATA IS REPLACING IT (Isac?)
+between.studies.overlap<-readRDS("../data/data_processing/between.studies.overlap.RDS")
 within.studies.overlap<-readRDS("data/data_processing/within.studies.overlap.RDS")
 
 bio.pairs <- read.csv("data/prep_biotime/bio_pairs_10km.csv")
@@ -314,27 +314,29 @@ meta.data<-make.meta(results,collated.pairs_standardized_summary)
 
 join meta data with results df:
 
+! [[[ DOUBT: in the code below, where "log.prop.change.with.meta" comes from? -- Clarify with **Isaac** ]]]
+
+
 ```{r}
 
-log.prop.change.with.meta<-left_join(results,meta.data) #join meta data with results df
-
+log.prop.change.with.meta.WITHIN<-left_join(results,meta.data) #join meta data with results df
 
 #add unique genera ID col
 log.prop.change.with.meta$UNIQUE.PAIR.ID=paste(log.prop.change.with.meta$Gn1,log.prop.change.with.meta$Gn2,log.prop.change.with.meta$PairID,sep="_")
-
 log.prop.change.with.meta.WITHIN$UNIQUE.PAIR.ID=paste(log.prop.change.with.meta.WITHIN$Gn1,log.prop.change.with.meta.WITHIN$Gn2,log.prop.change.with.meta.WITHIN$PairID,sep="_")
-
 
 #saveRDS(log.prop.change.with.meta,"data/log.prop.change.with.meta.RDS")
 #saveRDS(log.prop.change.with.meta.WITHIN,"data/preprocessing/log.prop.change.with.meta.WITHIN.RDS")
+
+
 ```
 
-
-Read last version 
 
 ```{r}
 log.prop.change.with.meta<-readRDS("data/log.prop.change.with.meta.RDS")
 ```
+
+
 
 
 Add better taxa cols
@@ -344,7 +346,6 @@ Add better taxa cols
 taxa1<-tax_name(query = unique(log.prop.change.with.meta$Gn1), get = "class", db = "itis")
 taxa2<-tax_name(query = unique(log.prop.change.with.meta$Gn2)[-which(unique(log.prop.change.with.meta$Gn2)%in%unique(log.prop.change.with.meta$Gn1))], get = "class", db = "itis")
 taxa<-rbind(taxa1,taxa2)
-
 #add new taxa col
 taxa<-readRDS("data/class.assignment.RDS")
 taxa$Gn1=taxa$query
@@ -357,6 +358,7 @@ log.prop.change.with.meta.taxa<-left_join(log.prop.change.with.meta.taxa,taxa[,c
 
 log.prop.change.with.meta.WITHIN<-left_join(log.prop.change.with.meta.WITHIN,taxa[,c("Gn1","RESOLVED.TAXA1")])
 log.prop.change.with.meta.WITHIN<-left_join(log.prop.change.with.meta.WITHIN,taxa[,c("Gn2","RESOLVED.TAXA2")])
+
 
 #saveRDS(log.prop.change.with.meta.taxa,"data/preprocessing/log.prop.change.with.meta.w.taxa.RDS")
 #saveRDS(log.prop.change.with.meta.WITHIN,"data/preprocessing/log.prop.change.with.meta.WITHIN.w.taxa.RDS")
@@ -446,19 +448,18 @@ full.data$dist[which(full.data$ID1==full.data$ID2)]<-0
 
 
 
-
-
-
-
 # 5. Assign interaction types between pairs
 
 
 
 ```{r}
-
-log_change <- readRDS("data/data_processing/log.prop.change.full.data.RDS")
-
+log_change <- log.prop.change.with.meta
 ```
+
+
+! [[[ DOUBT: shouldn't it read the new "log.prop.change.full.data" instead of "log.prop.change.with.meta"? -- clarify with **Emily** ]]]
+
+
 
 
 list of bio pairs with at least 10 overlapping years:
@@ -493,29 +494,232 @@ list2env(df_split, envir = .GlobalEnv)
 
 ```{r}
 
-df_list <- list()
 
+pair_interactions_1.1 <- make_split(split = split_1)
 
-pb<-set.prog.bar(nrow(split_1)) #sets progress bar
-for (i in 1:nrow(split_1)) {
-  pb$tick()
-  gn1 <- split_1[i, "Gn1"]
-  gn2 <- split_1[i, "Gn2"]
-  interactions <- get_interactions_by_taxa(sourcetaxon=gn1, 
-                                           targettaxon=gn2)
-  unique <- unique(interactions$interaction_type)
-  new_df <- data.frame(genus_1 = rep(gn1, each = length(unique)), 
-                       genus_2 = rep(gn2, each = length(unique)))
-  pairs <- cbind(new_df, char = rep(unique, length.out = nrow(new_df)))
-  df_list[[i]] <- pairs
-}
+pair_interactions_2 <- make_split(split = split_2)
 
-pair_interactions_1 <- do.call(rbind, df_list)
+pair_interactions_2 <- make_split(split = split_3)
+
+pair_interactions_2 <- make_split(split = split_4)
+
+pair_interactions_2 <- make_split(split = split_5)
+
 
 #write.csv(pair_interactions_1, "data/data_processing/pair_interactions_1.csv")
+#write.csv(pair_interactions_2, "data/data_processing/pair_interactions_2.csv")
+#write.csv(pair_interactions_3, "data/data_processing/pair_interactions_3.csv")
+#write.csv(pair_interactions_4, "data/data_processing/pair_interactions_4.csv")
+#write.csv(pair_interactions_5, "data/data_processing/pair_interactions_5.csv")
+
 
 ```
 
 
-(ONGOING)
+```{r}
+
+all_interactions <- rbind(pair_interactions_1, pair_interactions_2, pair_interactions_3, 
+                          pair_interactions_4, pair_interactions_5)
+colnames(all_interactions) <- c("Gn1", "Gn2", "interaction")
+
+#write.csv(all_interactions, "data/data_processing/genus_interaction_list.csv")
+
+```
+
+
+Read in all_interactions_2:
+
+
+```{r}
+
+
+all_interactions <- read.csv("data/data_processing/genus_interaction_list.csv")
+
+```
+
+```{r}
+
+parasite <- all_interactions %>%
+  filter(interaction=="pathogenOf")
+
+```
+
+
+
+
+Remove interaction pairs that are mistakes (pathogen, host, hemiparasite - see original all interactions above):
+
+```{r}
+
+mistake_interactions <- c("hasHost", "pathogenOf", "hemiparasiteOf", 'hostOf', 'pathogenOf', 
+                          'hasVector', 'parasiteOf')
+all_interactions_2<- all_interactions %>%
+  filter(!interaction %in% mistake_interactions)
+# write.csv(all_interactions_2, "data/data_processing/genus_interaction_list.csv")
+
+summary_interactions <- all_interactions_2 %>%
+  group_by(Gn1, Gn2) %>%
+  summarize(n=n()) %>%
+  arrange(desc(n))
+
+#unique rows summary_interactions: 
+unique_interactions_1 <-summary_interactions %>%
+  select(Gn1, Gn2) %>%
+  distinct()
+
+```
+
+
+
+Next steps: start collapsing interaction types into larger groups, 
+-predator-prey (including herbivory)
+
+-eatenBy, eats, preysOn, preyedUponBy
+-mutualism
+-mutualistOf
+-dispersal 
+-hasDispersalVector, dispersalVectorOf
+-visits
+-flowersVisitedBy, #visits, #visitsFlowersOf, #visitedBy
+-uncategorized_interaction
+-interactsWith
+
+
+```{r}
+
+cased_interactions<- all_interactions_2%>%
+  mutate(
+    interaction_type = case_when(
+      interaction %in%  c("preysOn", "preyedUponBy", "eatenBy", "eats") ~ "predator_prey",
+      interaction %in% c("mutualistOf") ~ "mutualism",
+      interaction %in% c("hasDispersalVector", "dispersalVectorOf") ~ "dispersal",
+      interaction %in% c("interactsWith", "flowersVisitedBy", "visits", "visitsFlowersOf", "visitedBy") ~ "uncategorized_interaction",
+      TRUE ~ NA_character_
+    ),
+    .keep = "unused"
+  )
+
+```
+
+
+
+Remove pairs whose characters don't match anything:
+
+```{r}
+
+cased_interactions <- cased_interactions %>%
+  filter(!is.na(interaction_type))
+cased_interaction_unique <- cased_interactions %>% distinct()
+
+```
+
+
+Check how many have multiple interactions still assigned:
+
+```{r}
+
+summary_interactions_cased<- cased_interaction_unique %>%
+  group_by(Gn1, Gn2) %>%
+  summarize(n=n()) %>%
+  arrange() %>%
+  left_join(cased_interaction_unique, by=c('Gn1', "Gn2"))
+
+```
+
+
+
+Remove rows with "unclassified_interaction" that are associated with any other interaction type for each genus pair
+
+```{r}
+
+#cased_interactions_filtered <- summary_interactions_cased %>%
+# filter(!(n>1 & interaction_type =="uncategorized_interaction"))
+# cased_interactions_filtered <- summary_interactions_cased %>%
+#   filter(!(n>1 & interaction_type =="visits"))
+
+cased_interactions_filtered_2<- cased_interactions %>%
+  group_by(Gn1, Gn2) %>%
+  mutate(num_interactions=n())
+
+```
+
+
+
+To-do: 
+
+-yay-nay interaction
+-Positive-negative-neutral
+-Integrate with existing dataset of log abundance for modellers and push 
+-Remove original n column from finalized dataset of interactions
+
+-Yes/no interaction
+-Get pairs 
+
+```{r}
+
+distinct_pairs <- cased_interactions_filtered_2 %>%
+  select(Gn1, Gn2) %>%
+  distinct()
+
+```
+
+```{r}
+
+#Read in interactions 
+log_change <- readRDS("data/data_processing/log.prop.change.with.meta.RDS")
+head(log_change)
+
+#Create a new column in df2 called "interaction" and initialize all values to 0
+
+log_change$interaction_present <- 0
+
+```
+
+
+Loop through each row in df2 and check if it matches any pairs in df1
+
+```{r}
+
+pb<-set.prog.bar(nrow(log_change)) #sets progress bar
+for (i in 1:nrow(log_change)) {
+  pb$tick()
+  if (paste(log_change$Gn1[i], log_change$Gn2[i], sep = "-") %in% 
+      paste(distinct_pairs$Gn1, distinct_pairs$Gn2, sep = "-")
+      | paste(log_change$Gn2[i], log_change$Gn1[i], sep = "-") %in% 
+      paste(distinct_pairs$Gn1, distinct_pairs$Gn2, sep = "-")) {
+    log_change$interaction_present[i] <- 1
+  }
+}
+
+colnames(log_change)[26] <- "interaction_found"
+
+#saveRDS(log_change, "data/data_processing/log.prop.change.interactions.RDS")
+
+```
+
+
+
+Do positive negative neutral 
+
+```{r}
+
+log_change_interaction <- readRDS("data/data_processing/log.prop.change.interactions.RDS")
+
+```
+
+
+```{r}
+
+pos_neg_interactions<- cased_interactions_filtered_2%>%
+  mutate(
+    interaction_benefit = case_when(
+      interaction_type %in%  c("predator_prey") ~ "negative",
+      interaction_type %in% c("mutualism", "dispersal") ~ "positive",
+      interaction_type %in% c("uncategorized_interaction") ~ "neutral",
+      TRUE ~ NA_character_
+    ),
+    .keep = "unused"
+  )
+
+```
 
